@@ -1,3 +1,9 @@
+2007-02-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/RelLib/_AttributeType.py: Add WITNESS (used by GEDCOM parser to
+	import textual event witness information
+	* src/GrampsDbUtils/_GedcomParse.py: Support for some types of Witness
+	data
+
 2007-02-26  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDbUtils/_GedcomParse.py: encode file name properly
 
